# android_ndk_example

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/ganadist/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ganadist/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/ganadist/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
